--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio | Desarrollo Lógico y Algoritmo</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="Style.css"> 
 </head>
 <body>
     <header class="hero">
@@ -224,4 +224,5 @@ Resultado: Se encuentra en la posición (índice): 1
             <p>&copy; 2025 - Portafolio Desarrollo Lógico y Algoritmo</p>
     </footer>
 </body>
+
 </html>
