--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <section class="info">
         <h2>Detalles de la Asignación</h2>
         <div class="info-grid">
-            [cite_start]<p><strong>Profesor:</strong> Napoleón Ibarra [cite: 2]</p>
-            [cite_start]<p><strong>Nombre:</strong>Rafael Rivera [cite: 3]</p>
-            [cite_start]<p><strong>Cédula:</strong> 4-834-474 [cite: 7]</p>
-            [cite_start]<p><strong>Fecha de Entrega:</strong> 02-12-2025 (3:20 PM) [cite: 5]</p>
-            [cite_start]<p><strong>Valor:</strong> 100 puntos [cite: 7]</p>
+            <p><strong>Profesor:</strong> Napoleón Ibarra</p>
+            <p><strong>Nombre:</strong>Rafael Rivera </p>
+            <p><strong>Cédula:</strong> 4-834-474 </p>
+            <p><strong>Fecha de Entrega:</strong> 02-12-2025 (3:20 PM) </p>
+                <p><strong>Valor:</strong> 100 puntos </p>
         </div>
     </section>
 
@@ -45,8 +45,8 @@
 
     <article class="assignment-card">
         <h3>3. Laboratorio Práctico 1: Estructuras Secuenciales y Funciones Matemáticas</h3>
-        [cite_start]<p><strong>Conceptos Cubiertos:</strong> Entrada/Salida (I/O) [cite: 55, 69][cite_start], Tipos de Datos (char, float) [cite: 67, 113][cite_start], Estructuras Secuenciales [cite: 135][cite_start], Librerías Matemáticas (`math.h`) [cite: 157][cite_start], Directivas de Preprocesador (`#define`)[cite: 229].</p>
-        [cite_start]<p><strong>Descripción:</strong> Esta práctica se enfocó en el desarrollo de algoritmos, pseudocódigo, diagramas de flujo y su implementación en el lenguaje C para resolver 5 problemas, incluyendo: saludo interactivo [cite: 63][cite_start], cálculo de precio neto con margen [cite: 101][cite_start], cálculo de propiedades de un triángulo rectángulo (hipotenusa, área, perímetro) [cite: 150] [cite_start]y un sistema de cálculo de ventas para tres productos con validación[cite: 206, 272].</p>
+        <p><strong>Conceptos Cubiertos:</strong> Entrada/Salida (I/O) , Tipos de Datos (char, float) , Estructuras Secuenciales , Librerías Matemáticas (`math.h`) , Directivas de Preprocesador (`#define`).</p>
+        <p><strong>Descripción:</strong> Esta práctica se enfocó en el desarrollo de algoritmos, pseudocódigo, diagramas de flujo y su implementación en el lenguaje C para resolver 5 problemas, incluyendo: saludo interactivo , cálculo de precio neto con margen , cálculo de propiedades de un triángulo rectángulo (hipotenusa, área, perímetro) [cite_start]y un sistema de cálculo de ventas para tres productos con validación.</p>
         
         <p><strong>Código C Destacado (Saludo Interactivo):</strong></p>
         <pre><code>
@@ -67,13 +67,13 @@ int main() {
 
 <article class="assignment-card">
         <h3>4. Ejercicio Práctico 1: Estructuras Condicionales y Repetitivas</h3>
-        [cite_start]<p><strong>Conceptos Cubiertos:</strong> Estructuras Condicionales (`if/else`), Bucle Repetitivo (`while`), Cálculos Financieros y de Consumo, Promedio Ponderado, Entrada de Datos[cite: 974, 1048, 1104, 1148].</p>
-        [cite_start]<p><strong>Descripción:</strong> Este ejercicio se centró en aplicar la lógica de toma de decisiones y repetición para resolver cuatro problemas principales[cite: 974, 1048, 1104, 1148]:</p>
+        <p><strong>Conceptos Cubiertos:</strong> Estructuras Condicionales (`if/else`), Bucle Repetitivo (`while`), Cálculos Financieros y de Consumo, Promedio Ponderado, Entrada de Datos.</p>
+        <p><strong>Descripción:</strong> Este ejercicio se centró en aplicar la lógica de toma de decisiones y repetición para resolver cuatro problemas principales:</p>
         <ul>
-            [cite_start]<li>**Problema 1 (Viaje):** Cálculo de consumo de combustible (L/100km, $/km$) y velocidad media (km/h, m/s), incluyendo una verificación de ahorro [cite: 974, 984-987, 992].</li>
-            [cite_start]<li>**Problema 2 (Crédito):** Sistema de gestión de cuenta que procesa saldos iniciales, cargos y créditos, determinando si un cliente excede su límite de crédito[cite: 1048, 1062].</li>
-            [cite_start]<li>**Problema 3 (Salario):** Cálculo del salario bruto de empleados con el manejo de horas extra (tarifa al 1.5x)[cite: 1104, 1113].</li>
-            [cite_start]<li>**Problema 4 (Notas):** Cálculo de la nota final ponderada de un estudiante y determinación de si aprobó o no el curso [cite: 1148, 1164-1168, 1175].</li>
+            <li>**Problema 1 (Viaje):** Cálculo de consumo de combustible (L/100km, $/km$) y velocidad media (km/h, m/s), incluyendo una verificación de ahorro.</li>
+            <li>**Problema 2 (Crédito):** Sistema de gestión de cuenta que procesa saldos iniciales, cargos y créditos, determinando si un cliente excede su límite de crédito.</li>
+            <li>**Problema 3 (Salario):** Cálculo del salario bruto de empleados con el manejo de horas extra (tarifa al 1.5x).</li>
+            <li>**Problema 4 (Notas):** Cálculo de la nota final ponderada de un estudiante y determinación de si aprobó o no el curso.</li>
         </ul>
         
         <p><strong>Código C Destacado (Verificación de Límite de Crédito):</strong></p>
@@ -224,5 +224,4 @@ Resultado: Se encuentra en la posición (índice): 1
             <p>&copy; 2025 - Portafolio Desarrollo Lógico y Algoritmo</p>
     </footer>
 </body>
-
 </html>
