--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@ int main() {
         <p><strong>Conceptos Cubiertos:</strong> Estructuras Condicionales (`if/else`), Bucle Repetitivo (`while`), Cálculos Financieros y de Consumo, Promedio Ponderado, Entrada de Datos.</p>
         <p><strong>Descripción:</strong> Este ejercicio se centró en aplicar la lógica de toma de decisiones y repetición para resolver cuatro problemas principales:</p>
         <ul>
-            <li>**Problema 1 (Viaje):** Cálculo de consumo de combustible (L/100km, $/km$) y velocidad media (km/h, m/s), incluyendo una verificación de ahorro.</li>
-            <li>**Problema 2 (Crédito):** Sistema de gestión de cuenta que procesa saldos iniciales, cargos y créditos, determinando si un cliente excede su límite de crédito.</li>
-            <li>**Problema 3 (Salario):** Cálculo del salario bruto de empleados con el manejo de horas extra (tarifa al 1.5x).</li>
-            <li>**Problema 4 (Notas):** Cálculo de la nota final ponderada de un estudiante y determinación de si aprobó o no el curso.</li>
+            <li>-Problema 1 (Viaje): Cálculo de consumo de combustible (L/100km, $/km$) y velocidad media (km/h, m/s), incluyendo una verificación de ahorro.</li>
+            <li>-Problema 2 (Crédito): Sistema de gestión de cuenta que procesa saldos iniciales, cargos y créditos, determinando si un cliente excede su límite de crédito.</li>
+            <li>-Problema 3 (Salario): Cálculo del salario bruto de empleados con el manejo de horas extra (tarifa al 1.5x).</li>
+            <li>-Problema 4 (Notas): Cálculo de la nota final ponderada de un estudiante y determinación de si aprobó o no el curso.</li>
         </ul>
         
         <p><strong>Código C Destacado (Verificación de Límite de Crédito):</strong></p>
@@ -137,10 +137,10 @@ int main() {
 <article class="assignment-card">
         <h3>6. Investigación 2: Análisis Comparativo (C vs. Python)</h3>
         <p><strong>Conceptos Clave:</strong> Análisis FODA, Lenguajes de Alto Nivel (Python), Lenguajes de Bajo Nivel (C), Paradigmas de Programación, Velocidad de Ejecución, Consumo de Memoria.</p>
-        <p><strong>Descripción:</strong> Esta asignación consistió en realizar un **Análisis FODA (Fortalezas, Oportunidades, Debilidades, Amenazas)** comparando los lenguajes de programación **C** y **Python**. La investigación concluyó que:
+        <p><strong>Descripción:</strong> Esta asignación consistió en realizar un "Análisis FODA (Fortalezas, Oportunidades, Debilidades, Amenazas)" comparando los lenguajes de programación C++ y Python. La investigación concluyó que:
         <ul>
-            <li>**Python** sobresale por su sintaxis simple, su gran cantidad de librerías y su utilidad en áreas como Inteligencia Artificial y Machine Learning. Sin embargo, es más lento y consume más memoria.</li>
-            <li>**C** sobresale por su control directo sobre recursos y hardware, siendo más eficiente en velocidad de ejecución y consumo de CPU, y es la base de muchos otros lenguajes.</li>
+            <li>-Python- sobresale por su sintaxis simple, su gran cantidad de librerías y su utilidad en áreas como Inteligencia Artificial y Machine Learning. Sin embargo, es más lento y consume más memoria.</li>
+            <li>-C- sobresale por su control directo sobre recursos y hardware, siendo más eficiente en velocidad de ejecución y consumo de CPU, y es la base de muchos otros lenguajes.</li>
         </ul>
         </p>
 
@@ -150,7 +150,7 @@ int main() {
 <article class="assignment-card">
         <h3>7. Ejercicio Práctico 2: Aplicación de la Lógica en Virtualización y Redes</h3>
         <p><strong>Conceptos Cubiertos:</strong> Virtualización (VMware/VirtualBox), Windows Server, Configuración de Redes (Estática/DHCP), IP Addressing, Subnet Mask, Default Gateway (Cisco Packet Tracer).</p>
-        <p><strong>Descripción:</strong> Este ejercicio práctico se dividió en dos partes. La primera fue un laboratorio de **Virtualización** que requirió la instalación de una distribución de Windows Server 2016/2019 en una máquina virtual. La segunda parte se centró en la **configuración lógica de redes**, utilizando Cisco Packet Tracer para establecer la conectividad y asignar direcciones IP estáticas y dinámicas a dispositivos (PCs, Servidores), demostrando la aplicación de lógica en la configuración de sistemas y redes.</p>
+        <p><strong>Descripción:</strong> Este ejercicio práctico se dividió en dos partes. La primera fue un laboratorio de -Virtualización- que requirió la instalación de una distribución de Windows Server 2016/2019 en una máquina virtual. La segunda parte se centró en la -configuración lógica de redes-, utilizando Cisco Packet Tracer para establecer la conectividad y asignar direcciones IP estáticas y dinámicas a dispositivos (PCs, Servidores), demostrando la aplicación de lógica en la configuración de sistemas y redes.</p>
         
         <p><strong>Configuración Lógica de IP (Extracto):</strong></p>
         <pre><code>
@@ -167,10 +167,10 @@ DNS Server: 8.8.8.8
     <article class="assignment-card">
         <h3>8. Taller Práctico 1: Búsqueda, Ordenamiento y Bases de Datos (MySQL)</h3>
         <p><strong>Conceptos Cubiertos:</strong> Búsqueda Secuencial, Algoritmo Push Down, Bases de Datos MySQL, Conexión Python-MySQL, Replicación de Bases de Datos (Alta Disponibilidad y Escalabilidad).</p>
-        <p><strong>Descripción:</strong> Este taller se centró en la investigación de algoritmos de manejo de datos y conceptos de Bases de Datos. En la parte algorítmica, se investigaron los procedimientos de **Búsqueda Secuencial** (revisar elemento por elemento) y el método **Push Down** (mover elementos dentro de un arreglo). En la parte de Bases de Datos, se definieron los requisitos de MySQL y se explicó la **Replicación**, destacando su utilidad para:
+        <p><strong>Descripción:</strong> Este taller se centró en la investigación de algoritmos de manejo de datos y conceptos de Bases de Datos. En la parte algorítmica, se investigaron los procedimientos de -Búsqueda Secuencial- (revisar elemento por elemento) y el método -Push Down- (mover elementos dentro de un arreglo). En la parte de Bases de Datos, se definieron los requisitos de MySQL y se explicó la -Replicación-, destacando su utilidad para:
         <ul>
-            <li>**Alta Disponibilidad:** Promover una réplica en caso de fallo del servidor principal (Origen).</li>
-            <li>**Escalabilidad:** Distribuir la carga de consultas de lectura (SELECTs) entre las réplicas para mejorar el rendimiento.</li>
+            <li>Alta Disponibilidad: Promover una réplica en caso de fallo del servidor principal (Origen).</li>
+            <li>Escalabilidad: Distribuir la carga de consultas de lectura (SELECTs) entre las réplicas para mejorar el rendimiento.</li>
         </ul>
         </p>
 
@@ -190,10 +190,10 @@ Resultado: Se encuentra en la posición (índice): 1
         <p><strong>Conceptos Cubiertos:</strong> Integración de Sistemas (PYTHON y MySQL), Lógica Transaccional (`START TRANSACTION`), Estructuras Repetitivas (`Repetir/Mientras`), Control de Flujo, Validación de Inventario (Stock).</p>
         <p><strong>Descripción:</strong> Este examen fue un caso de estudio complejo para la empresa "CHINOS CAFE", requiriendo el diseño de un **Sistema de Información POS (Punto de Venta)**. La solución se desarrolló utilizando Pseudocódigo y Diagramas de Flujo. La lógica principal incluye:
         <ul>
-            <li>**Conectividad:** Establecimiento de conexión con la Base de Datos MySQL.</li>
-            <li>**Bucle de Venta:** Un ciclo `Repetir` que permite ingresar múltiples productos a una misma venta hasta que se decide pagar.</li>
-            <li>**Validación Crítica:** Se implementa una condición de **validación de stock** (`Si stock actual < cantidad vender Entonces...`) para evitar vender productos que no están disponibles.</li>
-            <li>**Integridad de Datos:** Uso de transacciones para garantizar que la venta solo se concrete si todos los pasos son exitosos.</li>
+            <li>Conectividad: Establecimiento de conexión con la Base de Datos MySQL.</li>
+            <li>Bucle de Venta: Un ciclo `Repetir` que permite ingresar múltiples productos a una misma venta hasta que se decide pagar.</li>
+            <li>Validación Crítica: Se implementa una condición de **validación de stock** (`Si stock actual < cantidad vender Entonces...`) para evitar vender productos que no están disponibles.</li>
+            <li>Integridad de Datos: Uso de transacciones para garantizar que la venta solo se concrete si todos los pasos son exitosos.</li>
         </ul>
         </p>
 
