--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@ Resultado: Se encuentra en la posición (índice): 1
 <article class="assignment-card">
         <h3>9. Examen Parcial 2: Desarrollo de Sistema POS (Punto de Venta)</h3>
         <p><strong>Conceptos Cubiertos:</strong> Integración de Sistemas (PYTHON y MySQL), Lógica Transaccional (`START TRANSACTION`), Estructuras Repetitivas (`Repetir/Mientras`), Control de Flujo, Validación de Inventario (Stock).</p>
-        <p><strong>Descripción:</strong> Este examen fue un caso de estudio complejo para la empresa "CHINOS CAFE", requiriendo el diseño de un **Sistema de Información POS (Punto de Venta)**. La solución se desarrolló utilizando Pseudocódigo y Diagramas de Flujo. La lógica principal incluye:
+        <p><strong>Descripción:</strong> Este examen fue un caso de estudio complejo para la empresa "CHINOS CAFE", requiriendo el diseño de un Sistema de Información POS (Punto de Venta). La solución se desarrolló utilizando Pseudocódigo y Diagramas de Flujo. La lógica principal incluye:
         <ul>
             <li>Conectividad: Establecimiento de conexión con la Base de Datos MySQL.</li>
             <li>Bucle de Venta: Un ciclo `Repetir` que permite ingresar múltiples productos a una misma venta hasta que se decide pagar.</li>
-            <li>Validación Crítica: Se implementa una condición de **validación de stock** (`Si stock actual < cantidad vender Entonces...`) para evitar vender productos que no están disponibles.</li>
+            <li>Validación Crítica: Se implementa una condición de "validación de stock" (`Si stock actual < cantidad vender Entonces...`) para evitar vender productos que no están disponibles.</li>
             <li>Integridad de Datos: Uso de transacciones para garantizar que la venta solo se concrete si todos los pasos son exitosos.</li>
         </ul>
         </p>
