--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ int main() {
         </p>
 
         <a href="./Rafael Rivera Olmedo Alvarado (1).pdf" target="_blank" class="btn">Ver Investigación Completa (PDF)</a>
+        <a href="./Promg.pkt" target="_blank" class="btn secondary-btn">Ver Simulación Cisco (.pkt)</a>
     </article>
 
 <article class="assignment-card">
@@ -162,6 +163,9 @@ DNS Server: 8.8.8.8
         </code></pre>
 
         <a href="./Ejercicio Práctico2 Rafael y Olmedo.pdf" target="_blank" class="btn">Ver Ejercicio Práctico 2 (PDF)</a>
+        <a href="./PIPOL.pkt" target="_blank" class="btn secondary-btn">Ver Simulación Cisco (.pkt)</a>
+        <a href="./Hras psint.psc" target="_blank" class="btn secondary-btn">Ver Simulación Cisco (.psc)</a>
+        <a href="./Limon psint.psc" target="_blank" class="btn secondary-btn">Ver Simulación Cisco (.psc)</a>
     </article>
 
     <article class="assignment-card">
@@ -183,6 +187,9 @@ Resultado: Se encuentra en la posición (índice): 1
         </code></pre>
 
         <a href="./Taller Práctico1 (1).pdf" target="_blank" class="btn">Ver Taller Práctico 1 (PDF)</a>
+        <a href="./XYZ.pkt" target="_blank" class="btn secondary-btn">Ver Simulación Cisco (.pkt)</a>
+        <a href="./PushDown.psc" target="_blank" class="btn secondary-btn">Ver Simulación Cisco (.psc)</a>
+        <a href="./Pseu busqueda.psc" target="_blank" class="btn secondary-btn">Ver Simulación Cisco (.psc)</a>
     </article>
 
 <article class="assignment-card">
@@ -217,6 +224,8 @@ Resultado: Se encuentra en la posición (índice): 1
         </code></pre>
 
         <a href="./Examen Parcial2 Rafael Y Olmedo.pdf" target="_blank" class="btn">Ver Examen Parcial 2 (PDF)</a>
+        <a href="./Chino Coffe Sirve.pkt" target="_blank" class="btn secondary-btn">Ver Simulación Cisco (.pkt)</a>
+        <a href="./Chinos Cafe psint.psc" target="_blank" class="btn secondary-btn">Ver Simulación Cisco (.psc)</a>
     </article>
 
             </main>
