--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@ DNS Server: 8.8.8.8
 
         <a href="./Ejercicio Práctico2 Rafael y Olmedo.pdf" target="_blank" class="btn">Ver Ejercicio Práctico 2 (PDF)</a>
         <a href="./PIPOL.pkt" target="_blank" class="btn secondary-btn">Ver Simulación Cisco (.pkt)</a>
-        <a href="./Hras psint.psc" target="_blank" class="btn secondary-btn">Ver Simulación Cisco (.psc)</a>
-        <a href="./Limon psint.psc" target="_blank" class="btn secondary-btn">Ver Simulación Cisco (.psc)</a>
+        <a href="./Hras psint.psc" target="_blank" class="btn secondary-btn">Ver Pseudocódigo (.psc)</a>
+        <a href="./Limon psint.psc" target="_blank" class="btn secondary-btn">Ver Pseudocódigo (.psc)</a>
     </article>
 
     <article class="assignment-card">
@@ -188,8 +188,8 @@ Resultado: Se encuentra en la posición (índice): 1
 
         <a href="./Taller Práctico1 (1).pdf" target="_blank" class="btn">Ver Taller Práctico 1 (PDF)</a>
         <a href="./XYZ.pkt" target="_blank" class="btn secondary-btn">Ver Simulación Cisco (.pkt)</a>
-        <a href="./PushDown.psc" target="_blank" class="btn secondary-btn">Ver Simulación Cisco (.psc)</a>
-        <a href="./Pseu busqueda.psc" target="_blank" class="btn secondary-btn">Ver Simulación Cisco (.psc)</a>
+        <a href="./PushDown.psc" target="_blank" class="btn secondary-btn">Ver Pseudocódigo(.psc)</a>
+        <a href="./Pseu busqueda.psc" target="_blank" class="btn secondary-btn">Ver Pseudocódigo (.psc)</a>
     </article>
 
 <article class="assignment-card">
@@ -225,7 +225,7 @@ Resultado: Se encuentra en la posición (índice): 1
 
         <a href="./Examen Parcial2 Rafael Y Olmedo.pdf" target="_blank" class="btn">Ver Examen Parcial 2 (PDF)</a>
         <a href="./Chino Coffe Sirve.pkt" target="_blank" class="btn secondary-btn">Ver Simulación Cisco (.pkt)</a>
-        <a href="./Chinos Cafe psint.psc" target="_blank" class="btn secondary-btn">Ver Simulación Cisco (.psc)</a>
+        <a href="./Chinos Cafe psint.psc" target="_blank" class="btn secondary-btn">Ver Pseudocódigo (.psc)</a>
     </article>
 
             </main>
